Next rev, fix vulnerabilities

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "hua-hin-villa": "file:",
-    "next": "15.3.2",
+    "next": "^15.4.4",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
